# learn_system_programming_in_rust

./: README.md
02-echor/: Cargo.toml
02-echor/src/: main.rs
03-catr/: Cargo.toml
05-wcr/: Cargo.toml
05-wcr/src/: lib.rs
06-uniqr/: Cargo.toml
06-uniqr/src/: lib.rs  main.rs
07-findr/: Cargo.toml
07-findr/src/: lib.rs
08-cutr/: Cargo.toml
09-grepr/: Cargo.toml
09-grepr/src/: lib.rs
10-commr/: Cargo.toml
10-commr/src/: lib.rs
11-tailr/: Cargo.toml
11-tailr/src/: lib.rs
12-fortuner/: Cargo.toml
12-fortuner/src/: lib.rs
13-calr/: Cargo.toml
14-lsr/: Cargo.toml
catr/src/: lib.rs
echor/: mk-outs.sh
echor/tests/: cli.rs
headr/: Cargo.toml
