[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33"
users = "0.11"
tabular = "0.1.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"

